# Bootcamp-organizador-de-estudos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
estudos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
estudos/migrations/: 0001_initial.py
estudos/templates/estudos/: base.html  confirmar_exclusao.html  dashboard.html  materia_lista.html  sessao_form.html  sessao_lista.html  tarefa_lista.html
tests/: test_estudos.py
